@@ -6,10 +6,9 @@ import org.junit.jupiter.api.Tag;
 
 import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
-import java.sql.Timestamp;
+import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -18,15 +17,15 @@ import static org.junit.Assert.assertEquals;
 
 @Tag("Slow")
 public class ArrayConversionsTest {
-    
+
     @ClassRule
-    public static DatabaseRule dbr = DatabaseRule.defaultConfiguration();;
+    public static DatabaseRule dbr = DatabaseRule.defaultConfiguration();
 
     @BeforeClass
     public static void create() {
         drop();
         dbr.query("CREATE TABLE CA_TEST (" +
-                "TEXTA TEXT[], SHORTA INT2[], INTA INT4[], LONGA INT8[], FLOATA FLOAT4[], TIMESTAMPA TIMESTAMP[], BYTEAA BYTEA[])");
+                  "TEXTA TEXT[], SHORTA INT2[], INTA INT4[], LONGA INT8[], FLOATA FLOAT4[], TIMESTAMPA TIMESTAMP[], BYTEAA BYTEA[])");
     }
 
     @AfterClass
@@ -48,8 +47,8 @@ public class ArrayConversionsTest {
         dbr.query("INSERT INTO CA_TEST (SHORTA) VALUES ('{0, 1, 2, null, 4}')");
 
         assertArrayEquals(
-                new Short[]{0, 1, 2, null, 4},
-                getRow().getArray("shorta", Short[].class));
+            new Short[]{0, 1, 2, null, 4},
+            getRow().getArray("shorta", Short[].class));
     }
 
     @Test
@@ -57,8 +56,8 @@ public class ArrayConversionsTest {
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ('{0, null, 2, 3}')");
 
         assertArrayEquals(
-                new Integer[]{0, null, 2, 3},
-                getRow().getArray("inta", Integer[].class));
+            new Integer[]{0, null, 2, 3},
+            getRow().getArray("inta", Integer[].class));
     }
 
     @Test
@@ -66,8 +65,8 @@ public class ArrayConversionsTest {
         dbr.query("INSERT INTO CA_TEST (LONGA) VALUES ('{-1, null, 1, 2, 3}')");
 
         assertArrayEquals(
-                new Long[]{-1L, null, 1L, 2L, 3L},
-                getRow().getArray("longa", Long[].class));
+            new Long[]{-1L, null, 1L, 2L, 3L},
+            getRow().getArray("longa", Long[].class));
     }
 
     @Test
@@ -75,10 +74,10 @@ public class ArrayConversionsTest {
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ('{{{0}, {1}}, {{2}, {3}}}')");
 
         assertArrayEquals(
-                new Integer[][][]{
-                        new Integer[][]{new Integer[]{0}, new Integer[]{1}},
-                        new Integer[][]{new Integer[]{2}, new Integer[]{3}}},
-                getRow().getArray("inta", Integer[][].class));
+            new Integer[][][]{
+                new Integer[][]{new Integer[]{0}, new Integer[]{1}},
+                new Integer[][]{new Integer[]{2}, new Integer[]{3}}},
+            getRow().getArray("inta", Integer[][].class));
     }
 
     @Test
@@ -86,21 +85,21 @@ public class ArrayConversionsTest {
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES ('{foo, bar, \"{foo, bar}\"}')");
 
         assertArrayEquals(
-                new String[]{"foo", "bar", "{foo, bar}"},
-                getRow().getArray("texta", String[].class));
+            new String[]{"foo", "bar", "{foo, bar}"},
+            getRow().getArray("texta", String[].class));
     }
 
     @Test
     public void selectTextMulti() {
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES (" +
-                "'{{f, o, null}, {b, null, r}, {null, a, z}}')");
+                  "'{{f, o, null}, {b, null, r}, {null, a, z}}')");
 
         assertArrayEquals(
-                new String[][]{
-                        new String[]{"f", "o", null},
-                        new String[]{"b", null, "r"},
-                        new String[]{null, "a", "z"}},
-                getRow().getArray("texta", String[][].class));
+            new String[][]{
+                new String[]{"f", "o", null},
+                new String[]{"b", null, "r"},
+                new String[]{null, "a", "z"}},
+            getRow().getArray("texta", String[][].class));
     }
 
     @Test
@@ -108,27 +107,27 @@ public class ArrayConversionsTest {
         dbr.query("INSERT INTO CA_TEST (FLOATA) VALUES ('{177.7, 0, null, -2.012}')");
 
         assertArrayEquals(
-                new BigDecimal[]{
-                        new BigDecimal("177.7"),
-                        new BigDecimal("0"),
-                        null,
-                        new BigDecimal("-2.012")
-                },
-                getRow().getArray("floata", BigDecimal[].class));
+            new BigDecimal[]{
+                new BigDecimal("177.7"),
+                new BigDecimal("0"),
+                null,
+                new BigDecimal("-2.012")
+            },
+            getRow().getArray("floata", BigDecimal[].class));
     }
 
     @Test
     public void selectTimestamp() {
         dbr.query("INSERT INTO CA_TEST (TIMESTAMPA) VALUES ('"
-                + "{1999-05-16 00:00:00.591, 1970-02-04 01:02:33.01, null}')");
+                  + "{1999-05-16 00:00:00.591, 1970-02-04 01:02:33.01, null}')");
 
         assertArrayEquals(
-                new Timestamp[]{
-                        Timestamp.from(LocalDateTime.parse("1999-05-16T00:00:00.591").toInstant(ZoneOffset.UTC)),
-                        Timestamp.from(LocalDateTime.parse("1970-02-04T01:02:33.01").toInstant(ZoneOffset.UTC)),
-                        null
-                },
-                getRow().getArray("timestampa", Timestamp[].class));
+            new Instant[]{
+                LocalDateTime.parse("1999-05-16T00:00:00.591").toInstant(ZoneOffset.UTC),
+                LocalDateTime.parse("1970-02-04T01:02:33.01").toInstant(ZoneOffset.UTC),
+                null
+            },
+            getRow().getArray("timestampa", Instant[].class));
     }
 
     @Test
@@ -141,15 +140,15 @@ public class ArrayConversionsTest {
     @Test
     public void selectNestedInt() {
         Integer[][] a = new Integer[][]{
-                new Integer[]{1, 2, 3},
-                new Integer[]{4, 5, 6}
+            new Integer[]{1, 2, 3},
+            new Integer[]{4, 5, 6}
         };
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ($1)", List.of(new Object[]{a}));
         assertArrayEquals(
-                a,
-                dbr.query(
-                        "SELECT INTA FROM CA_TEST WHERE INTA = $1",
-                        List.of(new Object[]{a})).index(0).getArray("inta", Integer[].class));
+            a,
+            dbr.query(
+                "SELECT INTA FROM CA_TEST WHERE INTA = $1",
+                List.of(new Object[]{a})).index(0).getArray("inta", Integer[].class));
     }
 
     @Test
@@ -157,10 +156,10 @@ public class ArrayConversionsTest {
         String[] a = new String[]{"U&\"d\\0061t\\+000061\"", "d\u0061t\u0061"};
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES ($1)", List.of(new Object[]{a}));
         assertArrayEquals(
-                a,
-                dbr.query(
-                        "SELECT TEXTA FROM CA_TEST WHERE TEXTA = $1",
-                        List.of(new Object[]{a})).index(0).getArray("texta", String[].class));
+            a,
+            dbr.query(
+                "SELECT TEXTA FROM CA_TEST WHERE TEXTA = $1",
+                List.of(new Object[]{a})).index(0).getArray("texta", String[].class));
     }
 
     @Test
@@ -168,10 +167,10 @@ public class ArrayConversionsTest {
         short[][] a = new short[][]{new short[]{0, 1}, new short[]{1, 0}};
         dbr.query("INSERT INTO CA_TEST (INTA) VALUES ($1)", List.of(new Object[]{a}));
         assertEquals(
-                1,
-                dbr.query(
-                        "SELECT INTA FROM CA_TEST WHERE INTA = $1",
-                        List.of(new Object[]{a})).size());
+            1,
+            dbr.query(
+                "SELECT INTA FROM CA_TEST WHERE INTA = $1",
+                List.of(new Object[]{a})).size());
     }
 
     @Test
@@ -183,11 +182,12 @@ public class ArrayConversionsTest {
 
     @Test
     public void shouldRoundTripTimestamp() {
-        List<Timestamp[]> params = new ArrayList<>(1);
-        params.add(new Timestamp[]{new Timestamp(12345679), new Timestamp(12345678)});
+        var params = List.<Instant[]>of(new Instant[]{Instant.ofEpochMilli(12345679), Instant.ofEpochMilli(12345678)});
+
         dbr.query("INSERT INTO CA_TEST (TIMESTAMPA) VALUES ($1)", params);
-        Row row = dbr.query("SELECT TIMESTAMPA FROM CA_TEST WHERE TIMESTAMPA = $1", params).index(0);
-        assertArrayEquals(params.get(0), row.getArray(0, Timestamp[].class));
+        var row = dbr.query("SELECT TIMESTAMPA FROM CA_TEST WHERE TIMESTAMPA = $1", params).index(0);
+
+        assertArrayEquals(params.getFirst(), row.getArray(0, Instant[].class));
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -198,9 +198,10 @@ public class ArrayConversionsTest {
 
     @Test
     public void shouldAllowPrimitiveArrayParameters() {
-        long[] input = {1L, 2L, 3L};
+        var input = new long[]{1L, 2L, 3L};
         dbr.query("INSERT INTO CA_TEST (LONGA) VALUES ($1)", List.of(input));
-        Long[] output = getRow().getArray("longa", Long[].class);
+        var output = getRow().getArray("longa", Long[].class);
+
         for (int i = 0; i < input.length; i++) {
             assertEquals(input[i], output[i].longValue());
         }
@@ -208,17 +209,19 @@ public class ArrayConversionsTest {
 
     @Test
     public void shouldParseUnquotedStringsCorrectly() {
-        String[] values = new String[]{"NotNull", "NULLA", "string", null};
+        var values = new String[]{"NotNull", "NULLA", "string", null};
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES($1)", Collections.singletonList(values));
-        Row row = dbr.query("SELECT * FROM CA_TEST").index(0);
+
+        var row = dbr.query("SELECT * FROM CA_TEST").index(0);
         assertArrayEquals(values, row.getArray("texta", String[].class));
     }
 
     @Test
     public void shouldParseNullTextCorrectly() {
-        String[] values = new String[]{"NULL", null, "string"};
+        var values = new String[]{"NULL", null, "string"};
         dbr.query("INSERT INTO CA_TEST (TEXTA) VALUES($1)", Collections.singletonList(values));
-        Row row = dbr.query("SELECT * FROM CA_TEST").index(0);
+
+        var row = dbr.query("SELECT * FROM CA_TEST").index(0);
         assertArrayEquals(values, row.getArray("texta", String[].class));
     }
 
@@ -229,11 +232,12 @@ public class ArrayConversionsTest {
         bb[1] = "blob 1 content".getBytes(StandardCharsets.UTF_8); // UTF-8 is hard coded here only because the ascii compatible data
         bb[2] = "blob 2 content".getBytes(StandardCharsets.UTF_8); // UTF-8 is hard coded here only because the ascii compatible data
         dbr.query("INSERT INTO CA_TEST(BYTEAA) VALUES ($1)", Collections.singletonList(bb));
-        byte[][] readbb = dbr.query("SELECT BYTEAA FROM CA_TEST WHERE BYTEAA = $1", Collections.singletonList(bb)).index(0).getArray(0, byte[][].class);
+
+        byte[][] readbb = dbr.query("SELECT BYTEAA FROM CA_TEST WHERE BYTEAA = $1", Collections.singletonList(bb)).index(0).getArray(0,
+                                                                                                                                     byte[][].class);
         assertEquals(bb.length, readbb.length);
         assertArrayEquals(bb[0], readbb[0]);
         assertArrayEquals(bb[1], readbb[1]);
         assertArrayEquals(bb[2], readbb[2]);
     }
-
 }
